src/test/deca/syntax/valid/objet/DeclClassBodyempty.deca
// Description : test déclaration d'une classe avec méthode sans body
// Resultats : ok

class Thing {
    
    int getI(){
    }
}
